[#386] Limits answer bundle size in query command processor
[#421] Use an optional proxy parameter to filter QueryAnswers with zeroed importance
[#433] Build a dynamic lib with all the libs from all the packages and add it to lib/das.os
[#418] Implement remote error handling across peers in the ServiceBus
[#505] Add a strength value to QueryAnswer
[#511] Create a Properties class in commons by moving and renaming CustomAttributesMap from AtomDB package
[#499] Refactor proxy classes to use commons:Properties
[#521] Creates atom classes in common and refactors query elements to use them
[#499] Allow ATOM elements in query tokens allowing the use of handles as LINK targets
[#524] Using MongoDB split collections (nodes and links)
[#499] Implemented Evolution agent to process QUERY_EVOLUTION commands in the service bus
[#568] Added simple profiling primitives in Logger
[#544] Add benchmark tests for AtomDB