@@ -2,4 +2,4 @@
 
 using namespace fitness_functions;
 
-float UnitTestFunction::eval(shared_ptr<QueryAnswer> query_answer) { return 0.5; }
+float UnitTestFunction::eval(shared_ptr<QueryAnswer> query_answer) { return query_answer->importance; }
