@@ -27,6 +27,13 @@ class TestProcessor : public QueryEvolutionProcessor {
     }
 };
 
+class TestFitnessFunction : public FitnessFunction {
+   public:
+    float eval(shared_ptr<QueryAnswer> query_answer) override {
+        return 1;
+    }
+};
+
 TEST(QueryEvolution, protected_methods) {
     TestConfig::load_environment();
     AtomDBSingleton::init();
@@ -55,5 +62,20 @@ TEST(QueryEvolution, protected_methods) {
                             "VARIABLE",
                             "v2"};
 
-    QueryEvolutionProxy proxy(query, {}, {}, "unit_test", "query_evolution_test");
+    QueryEvolutionProxy proxy1(query, {}, {}, "query_evolution_test", "unit_test");
+    EXPECT_EQ(proxy1.compute_fitness(make_shared<QueryAnswer>("blah", 0.0)), 0.0);
+    EXPECT_EQ(proxy1.compute_fitness(make_shared<QueryAnswer>("blah", 0.5)), 0.5);
+    EXPECT_EQ(proxy1.compute_fitness(make_shared<QueryAnswer>("blah", 1.0)), 1.0);
+    QueryEvolutionProxy proxy2(query, {}, {}, "query_evolution_test", FitnessFunctionRegistry::REMOTE_FUNCTION, make_shared<TestFitnessFunction>());
+    EXPECT_EQ(proxy2.compute_fitness(make_shared<QueryAnswer>("blah", 0.0)), 1.0);
+    EXPECT_EQ(proxy2.compute_fitness(make_shared<QueryAnswer>("blah", 0.5)), 1.0);
+    EXPECT_EQ(proxy2.compute_fitness(make_shared<QueryAnswer>("blah", 1.0)), 1.0);
+    vector<string> tokens;
+    proxy2.tokenize(tokens);
+    QueryEvolutionProxy proxy3;
+    proxy3.untokenize(tokens);
+    EXPECT_FALSE(proxy1.is_fitness_function_remote());
+    EXPECT_FALSE(proxy2.is_fitness_function_remote());
+    EXPECT_TRUE(proxy3.is_fitness_function_remote());
+    EXPECT_THROW(proxy3.compute_fitness(make_shared<QueryAnswer>("blah", 0.0)), runtime_error);
 }
